
      2.11: Released TBD...

  IMPROVED: Microtelecom Perseus integration.


      2.10: Released January 21, 2018

     FIXED: Crash when starting gqrx using hackrf.
     FIXED: Spelling errors.
  IMPROVED: SDRPlay integration.


       2.9: Released November 11, 2017

       NEW: Airspy HF+ support.
     FIXED: Always save TCP and UDP host settings.
     FIXED: Application hangs when pulseaudio server is not running.


       2.8: Released September 16, 2017

       NEW: Remote control command to set LNB LO (LNB_LO).
     FIXED: Inactive Start DSP and Config buttons in toolbar.
     FIXED: Frequency controller digit not redrawn after a resize.
     FIXED: Set default mode to AM instead of none.
  IMPROVED: Detection of gr-osmosdr when installed in custom directory.
  IMPROVED: Remote frequency handling.


       2.7: Released August 19, 2017

       NEW: Airspy HF+ integration.
       NEW: PlutoSDR integration.
       NEW: Restore filter low cut and high cut between sessions.
       NEW: Restore FM parameters between sessions.
       NEW: Restore remote control state between sessions.
       NEW: Support for passband when setting mode through remote.
       NEW: Widget to enter receiver frequency.
       NEW: Button to reset squelch to its default (-150 dB) value.
     FIXED: Keep waterfall zoom level and zoom slider synchronised.
     FIXED: RDS status is not kept while jumping through bookmark.
     FIXED: .conf files are deleted when changes are saved.
     FIXED: Remote control not working if $http_proxy is set.
     FIXED: Audio rec does not work after trying to play deleted file.
     FIXED: QtSvg dependency.
  IMPROVED: Tuning through the remote control interface.
  IMPROVED: Increase narrow band receiver rate to 96 ksps (for APT).
  IMPROVED: LimeSDR integration.
  IMPROVED: Voiceover interface.
  IMPROVED: Input decimator performance.
  IMPROVED: Increased frequency limit to 999 GHz (500 GHz LO).
  IMPROVED: Hamradio style frequency display.