@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>320</width>
-    <height>386</height>
+    <width>288</width>
+    <height>416</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -83,8 +83,8 @@
         <rect>
          <x>0</x>
          <y>0</y>
-         <width>310</width>
-         <height>357</height>
+         <width>278</width>
+         <height>387</height>
         </rect>
        </property>
        <layout class="QVBoxLayout" name="verticalLayout">
@@ -123,7 +123,7 @@
           <property name="spacing">
            <number>6</number>
           </property>
-          <item row="6" column="1" colspan="2">
+          <item row="7" column="1" colspan="2">
            <widget class="ctkRangeSlider" name="pandRangeSlider">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
@@ -154,7 +154,7 @@
             </property>
            </widget>
           </item>
-          <item row="8" column="3" rowspan="2">
+          <item row="9" column="3" rowspan="2">
            <widget class="QLabel" name="zoomLevelLabel">
             <property name="sizePolicy">
              <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
@@ -176,7 +176,7 @@
             </property>
            </widget>
           </item>
-          <item row="5" column="1" colspan="3">
+          <item row="6" column="1" colspan="3">
            <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="0,0">
             <property name="spacing">
              <number>2</number>
@@ -264,7 +264,7 @@
             </property>
            </widget>
           </item>
-          <item row="4" column="3">
+          <item row="5" column="3">
            <widget class="QLabel" name="wfLabel">
             <property name="sizePolicy">
              <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
@@ -280,7 +280,7 @@
             </property>
            </widget>
           </item>
-          <item row="8" column="1" rowspan="2" colspan="2">
+          <item row="9" column="1" rowspan="2" colspan="2">
            <widget class="QSlider" name="fftZoomSlider">
             <property name="sizePolicy">
              <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
@@ -336,7 +336,7 @@
             </property>
            </widget>
           </item>
-          <item row="8" column="0" rowspan="2">
+          <item row="9" column="0" rowspan="2">
            <widget class="QLabel" name="zoomLAbel">
             <property name="toolTip">
              <string>Set zoom level on the frequency axis</string>
@@ -352,7 +352,7 @@
             </property>
            </widget>
           </item>
-          <item row="3" column="1" colspan="2">
+          <item row="4" column="1" colspan="2">
            <widget class="QSlider" name="fftAvgSlider">
             <property name="sizePolicy">
              <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
@@ -386,7 +386,7 @@
             </property>
            </widget>
           </item>
-          <item row="11" column="0">
+          <item row="12" column="0">
            <widget class="QLabel" name="colorLabel">
             <property name="toolTip">
              <string>Color for the FFT plot</string>
@@ -399,7 +399,7 @@
             </property>
            </widget>
           </item>
-          <item row="11" column="1">
+          <item row="12" column="1">
            <widget class="QtColorPicker" name="colorPicker">
             <property name="sizePolicy">
              <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
@@ -532,7 +532,7 @@
             </item>
            </widget>
           </item>
-          <item row="6" column="0">
+          <item row="7" column="0">
            <widget class="QLabel" name="pandRangeLabel">
             <property name="toolTip">
              <string>Set pandapter dB range</string>
@@ -548,7 +548,7 @@
             </property>
            </widget>
           </item>
-          <item row="4" column="0">
+          <item row="5" column="0">
            <widget class="QLabel" name="pandLabel">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
@@ -564,7 +564,7 @@
             </property>
            </widget>
           </item>
-          <item row="3" column="0">
+          <item row="4" column="0">
            <widget class="QLabel" name="fftAvgLabel">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
@@ -596,7 +596,7 @@
             </property>
            </widget>
           </item>
-          <item row="7" column="0">
+          <item row="8" column="0">
            <widget class="QLabel" name="wfRangeLabel">
             <property name="toolTip">
              <string>Set waterfall dB range</string>
@@ -793,7 +793,7 @@
             </property>
            </widget>
           </item>
-          <item row="10" column="0" colspan="4">
+          <item row="11" column="0" colspan="4">
            <layout class="QHBoxLayout" name="horizontalLayout" stretch="0,0,0">
             <property name="spacing">
              <number>2</number>
@@ -884,7 +884,7 @@
             </item>
            </layout>
           </item>
-          <item row="11" column="2">
+          <item row="12" column="2">
            <widget class="QPushButton" name="fillButton">
             <property name="sizePolicy">
              <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
@@ -918,7 +918,7 @@
             </property>
            </widget>
           </item>
-          <item row="5" column="0">
+          <item row="6" column="0">
            <widget class="QLabel" name="peakLabel">
             <property name="text">
              <string>Peak</string>
@@ -938,7 +938,7 @@
             </property>
            </widget>
           </item>
-          <item row="7" column="1" colspan="2">
+          <item row="8" column="1" colspan="2">
            <widget class="ctkRangeSlider" name="wfRangeSlider">
             <property name="toolTip">
              <string>Set waterfall dB range</string>
@@ -967,7 +967,7 @@
             </property>
            </widget>
           </item>
-          <item row="4" column="1" colspan="2">
+          <item row="5" column="1" colspan="2">
            <widget class="QSlider" name="fftSplitSlider">
             <property name="sizePolicy">
              <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
@@ -998,7 +998,7 @@
             </property>
            </widget>
           </item>
-          <item row="12" column="0" colspan="4">
+          <item row="13" column="0" colspan="4">
            <spacer name="verticalSpacer">
             <property name="orientation">
              <enum>Qt::Vertical</enum>
@@ -1011,7 +1011,7 @@
             </property>
            </spacer>
           </item>
-          <item row="6" column="3">
+          <item row="7" column="3">
            <widget class="QPushButton" name="lockButton">
             <property name="enabled">
              <bool>true</bool>
@@ -1040,6 +1040,66 @@
             <property name="checkable">
              <bool>true</bool>
             </property>
+           </widget>
+          </item>
+          <item row="3" column="0">
+           <widget class="QLabel" name="label_2">
+            <property name="toolTip">
+             <string>FFT window</string>
+            </property>
+            <property name="text">
+             <string>Window</string>
+            </property>
+            <property name="alignment">
+             <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+            </property>
+           </widget>
+          </item>
+          <item row="3" column="1" colspan="2">
+           <widget class="QComboBox" name="fftWinComboBox">
+            <property name="toolTip">
+             <string>FFT window</string>
+            </property>
+            <item>
+             <property name="text">
+              <string>Hamming</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>Hann</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>Blackman</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>Rectangular</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>Kaiser</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>Blackman-Harris</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>Bartlett</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>Flattop</string>
+             </property>
+            </item>
            </widget>
           </item>
          </layout>
